Fix sidebar gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body {
 .sidebar-medium,
 .sidebar-bottom {
     display: grid;
-    gap: 1rem;
+    gap: 0.6rem;
 }
 
 .dashboard-icon {
